add_executable(leetcode
        P0026RemoveDuplicatesFromSortedArray.cpp
        P0027RemoveElement.cpp
        P0042TrappingRainWater.cpp
        P0045JumpGame2.cpp
        P0055JumpGame.cpp
        P0070ClimbingStairs.cpp
        P0088MergeSortedArray.cpp
        P0080RemoveDuplicatesFromSortedArray2.cpp
        P0121BestTimeToBuyAndSellStock.cpp
        P0122BestTimeToBuyAndSellStock2.cpp
        P0135Candy.cpp
        P0169MajorityElement.cpp
        P0189RotateArray.cpp
        P0209MinimumSizeSubarraySum.cpp
        P0198HouseRobber.cpp
        P0120Triangle.cpp
        P0053MaximumSubarray.cpp
        P0124BinaryTreeMaximumPathSum.cpp

)
target_link_libraries(
        leetcode
        GTest::gtest_main
)
gtest_discover_tests(leetcode)

add_executable(cpp-playground
        main.cpp
)
